fix: layout problems

--- a/styles/article.scss
+++ b/styles/article.scss
@@ -2,6 +2,7 @@
   padding: 1.2rem;
   margin: auto;
   max-width: 1366px;
+  box-sizing: border-box;
 
   p,
   em,
